complete layout and styling of homepage

--- a/main.css
+++ b/main.css
@@ -17,31 +17,6 @@ p {
 	font-size: 18px;
 }
 
-#hero {
-	background-image: url("images/bg.png");
-	height: 100%;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-}
-
-.container {
-	display: flex;
-	flex-flow: row wrap;
-	width: 1160px;
-	margin: 0 auto;
-}
-
-.nav a {
-	float:right;
-}
-
-li {
-	display: inline;
-	list-style-type: none;
-	 margin-left: 65px;
-}
-
 a {
 	font-family: 'Roboto Slab';
 	font-size: 18px;
@@ -55,14 +30,73 @@ a:hover, a:active {
 	color: #000;
 	text-decoration: none;
 }
+a span {
+	color:white;
+}
+
+#hero {
+	background-image: url("images/bg.png");
+	height: 100%;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.container {
+	display: flex;
+	flex-flow: row wrap;
+	width: 1140px;
+	margin: 0 auto;
+	min-height: calc(100vh - 50px);
+}
 
 .header {
-	align-self: center;
+	display: flex;
+	margin-top: 30px;
+	width: 100%;
+
+}
+
+.navigation {
+	list-style: none;
+	display: inline-flex;
+	margin: 25px 0 0 0;
+	padding: 0;
+	width: 556px;
+	justify-content: space-between;
+
+}
+
+.navigation a {
+	list-style-type: none;
+	font-size:16px;
+	color: #FFF;
+	text-decoration: none;
+}
+
+.navigation a:hover {
+	font-weight:500;
+	color: #FFF;
+	text-decoration: none;
+}
+
+.border {
+	height: 10px;
+	border-bottom:1px solid white;
+	margin: 25px 30px 0 30px;
+	width: 390px;
+}
+
+.headline {
+	margin:0;
+	width:484px;
 }
 
 .lead {
 	font-family: 'Montserrat';
 	font-size: 70px;
+	line-height:72px;
+	color: white;
 	font-weight: 500;
 	text-transform: uppercase;
 }
@@ -77,17 +111,19 @@ a:hover, a:active {
 
 .footer {
 	font-family: 'Roboto Slab', serif;
-	font-size:18px;
+	font-size:14px;
+	line-height:50px;
 	font-weight:300;
-	align-self: center;
-	height: 70px;
+	height: 50px;
 	width: 100%;
 	margin:0;
 	background-color: #FFF;
+	text-align: center;
+	vertical-align: middle;
 }
 
 @media all and (min-width: 800px) {
-  .nav     { flex: 3 0px; }
-  .header  { order: 1; } 
-  .footer  { order: 2; }
+  .header    { order: 1; }
+  .headline  { order: 2; } 
+  .footer    { order: 3; }
 }
