--- a/main.css
+++ b/main.css
@@ -31,6 +31,11 @@ p {
 	line-height:20px;
 }
 
+.largetext {
+	font-size: 18px;
+	line-height: 24px;
+}
+
 a.one {
 	font-family: 'Roboto Slab';
 	font-size: 18px;
@@ -211,6 +216,38 @@ a.two:hover, a.two:active {
 	margin:	30px 0 30px 0;
 	width: 457px;
 	border-bottom:1px solid black;
+}
+
+.primary {
+	font-family: 'Roboto Slab', serif;
+	font-size: 18px;
+	color: black;
+	border: none;
+	background-color: white;
+}
+
+.secondary {
+	background-color: black;
+	font-family: 'Roboto Slab', serif;
+	font-size: 14px;
+	color: white;
+	width: 165px;
+	height: 38px;
+	border:none;
+	float: right;
+}
+
+.secondary:hover {
+	border: 1px solid black;
+	background-color: white;
+	color: black;
+}
+
+.quantity {
+	font-family: 'Roboto Slab', serif;
+	font-size: 18px;
+	font-weight:300;
+	padding: 0 10px 0 10px;
 }
 
 .footer {
