--- a/main.css
+++ b/main.css
@@ -127,6 +127,21 @@ a.two:hover, a.two:active {
 	text-decoration: none;
 }
 
+#quant {
+	font-family: 'Roboto Slab', serif;
+	font-size: 14px;
+	font-weight: 300;
+	margin-right: 10px;
+}
+
+#quantwhite{
+	font-family: 'Roboto Slab', serif;
+	font-size: 14px;
+	font-weight: 300;
+	margin-right: 10px;
+	color: #FFF;
+}
+
 .border {
 	height: 10px;
 	border-bottom:1px solid white;
@@ -280,11 +295,32 @@ a.two:hover, a.two:active {
 	color: black;
 }
 
-.quantity {
+#dropdown {
+	border: 1px solid #000;
+	background: transparent;
+  	-webkit-appearance: none;
+  	-webkit-border-radius: 0px;
 	font-family: 'Roboto Slab', serif;
-	font-size: 18px;
-	font-weight:300;
-	padding: 0 10px 0 10px;
+	background: url("images/down-chevron.png") no-repeat 96% 0;
+	font-size: 14px;
+	height: 38px;
+	width: 215px;
+	padding: 10px;
+	margin-bottom: 20px;
+}
+
+.type {
+	margin: 10px;
+}
+
+tr {
+	height: 30px;
+}
+
+td {
+	font-family: 'Roboto Slab', serif;
+	font-size: 14px;
+	width: 230px;
 }
 
 .footer {
@@ -303,10 +339,11 @@ a.two:hover, a.two:active {
 @media all and (min-width: 800px) {
   .header    { order: 1; }
   .headline  { order: 2; } 
-  .menu      { order: 3; } 
-  .products  { order: 4; }
-  .overview  { order: 5; }
-  .border-long   { order: 6; }
-  .more      { order: 7; }
-  .footer    { order: 8; }
+  .menu      { order: 3; }
+  .cart 	 { order: 4; }
+  .products  { order: 5; }
+  .overview  { order: 6; }
+  .border-long   { order: 7; }
+  .more      { order: 8; }
+  .footer    { order: 9; }
 }
