--- a/main.css
+++ b/main.css
@@ -37,7 +37,7 @@ p {
 }
 
 .largetext {
-	font-size: 18px;
+	font-size: 16px;
 	line-height: 24px;
 }
 
@@ -336,6 +336,7 @@ tr {
 
 td {
 	font-family: 'Roboto Slab', serif;
+	font-weight: 300;
 	font-size: 14px;
 	width: 230px;
 }
