working through add cart function

--- a/main.css
+++ b/main.css
@@ -139,14 +139,14 @@ a.two:hover, a.two:active {
 	text-decoration: none;
 }
 
-#quant {
+#cart {
 	font-family: 'Roboto Slab', serif;
 	font-size: 14px;
 	font-weight: 300;
 	margin-right: 10px;
 }
 
-#quantwhite{
+#cartwhite {
 	font-family: 'Roboto Slab', serif;
 	font-size: 14px;
 	font-weight: 300;
