--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+/*Common, macro level tags styled here*/
 html, body {
 	height: 100%;
 	margin: 0;
@@ -36,11 +37,13 @@ p {
 	line-height:20px;
 }
 
+/*Unique text style*/
 .largetext {
 	font-size: 16px;
 	line-height: 24px;
 }
 
+/*Establised link styles*/
 a.one {
 	font-family: 'Roboto Slab';
 	font-size: 18px;
@@ -69,6 +72,7 @@ a.two:hover, a.two:active {
 	text-decoration: none;
 }
 
+/*Homepage + navigation styles*/
 .logo {
 	max-width: 100px;
 	height: auto;
@@ -146,7 +150,7 @@ a.two:hover, a.two:active {
 	margin-right: 10px;
 }
 
-#cartwhite {
+.cartwhite {
 	font-family: 'Roboto Slab', serif;
 	font-size: 14px;
 	font-weight: 300;
@@ -154,6 +158,7 @@ a.two:hover, a.two:active {
 	color: #FFF;
 }
 
+/*Site flourishes*/
 .border {
 	height: 10px;
 	border-bottom:1px solid white;
@@ -170,6 +175,7 @@ a.two:hover, a.two:active {
 	width:484px;
 }
 
+/*More unique styles*/
 .lead {
 	font-family: 'Montserrat';
 	font-size: 70px;
@@ -187,12 +193,8 @@ a.two:hover, a.two:active {
 
 }
 
+/*Style the menu page*/
 .menu {
-	margin-top:60px;
-	width:566px;
-}
-
-#cart {
 	margin-top:60px;
 	width:566px;
 }
@@ -263,6 +265,7 @@ a.two:hover, a.two:active {
 	object-fit: cover;
 }
 
+/*Product page styles*/
 .description {
 	width:457px;
 	margin-left: 30px;
@@ -287,6 +290,7 @@ a.two:hover, a.two:active {
 	border-bottom:1px solid black;
 }
 
+/*button styles*/
 .primary {
 	font-family: 'Roboto Slab', serif;
 	font-size: 18px;
@@ -310,6 +314,13 @@ a.two:hover, a.two:active {
 	border: 1px solid black;
 	background-color: white;
 	color: black;
+}
+/*Additional styles for js fuctions*/
+#close {
+	background: url("images/close.png") no-repeat;
+	width: 15px;
+	height:18px;
+	border: none;
 }
 
 #dropdown {
@@ -341,6 +352,11 @@ td {
 	width: 230px;
 }
 
+#yourOrder {
+	margin-top: 60px;
+}
+
+
 .footer {
 	font-family: 'Roboto Slab', serif;
 	font-size:12px;
@@ -353,7 +369,7 @@ td {
 	text-align: center;
 	vertical-align: middle;
 }
-
+/*Flexbox displau*/
 @media all and (min-width: 800px) {
   .header    { order: 1; }
   .headline  { order: 2; } 
